objects/EXTest__c.object
<CustomObject>
    <fields>
        <fullName>eid2__c</fullName>
        <externalId>true</externalId>
        <label>eid2</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eid3__c</fullName>
        <externalId>true</externalId>
        <label>eid3</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <externalId>true</externalId>
        <label>eid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EXTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EXTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EXTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>